tests/snapshots/parser__logical_binary__comparison_in_logical.snap
---
source: tests/parser.rs
expression: "parse(\"1 < 2 and 3 == 3\")"
---
Ok(
    [
        Expr(
            Binary {
                op: And,
                lhs: Binary {
                    op: Lt,
                    lhs: Int(
                        1,
                        Span {
                            start: 0,
                            end: 1,
                        },
                    ),
                    rhs: Int(
                        2,
                        Span {
                            start: 4,
                            end: 5,
                        },
                    ),
                    span: Span {
                        start: 0,
                        end: 5,
                    },
                },
                rhs: Binary {
                    op: Eq,
                    lhs: Int(
                        3,
                        Span {
                            start: 10,
                            end: 11,
                        },
                    ),
                    rhs: Int(
                        3,
                        Span {
                            start: 15,
                            end: 16,
                        },
                    ),
                    span: Span {
                        start: 10,
                        end: 16,
                    },
                },
                span: Span {
                    start: 0,
                    end: 16,
                },
            },
        ),
    ],
)
